--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aliyan",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "@aliyan_jabbar/cli-number-guessing": "^1.0.1",
     "inquirer": "^9.2.16"
