--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "@aliyan_jabbar/cli-number-guessing",
-  "version": "2.0.1",
-  "description": "This is cli based number guessing game",
+  "name": "ali322-cli-number-guessing-game",
+  "version": "1.1.1",
+  "description": "",
   "main": "index.js",
   "type": "module",
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aliyan",
   "license": "ISC",
   "dependencies": {
-    "@aliyan_jabbar/cli-number-guessing": "^1.0.1",
     "inquirer": "^9.2.16"
   },
   "devDependencies": {
