--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code_with_aliyan_cli_number_guessing_game",
-  "version": "1.1.0",
+  "version": "2.1.0",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -14,6 +14,6 @@
     "inquirer": "^9.2.16"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.7"
+    "@types/inquirer": "9.0.7"
   }
 }
